--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -79,7 +79,7 @@ For more information about system groups, see xref:reference:systems/system-grou
 
 
 [[retail.sect.install.branch]]
-== Install the Branch Server and Register It to {susemgr}
+== Install the Branch Server and Register it to {susemgr}
 
 Your branch server must be a Salt client, running {susemgrproxy} 4.0.
 With a limited feature set, {susemgrproxy} 3.2 is also possible.
