--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -91,7 +91,7 @@ Do not install the branch server as a traditionally managed client.
 
 For instructions to install Salt-based proxy clients and register them to {susemgr}, see xref:installation:install-proxy-unified.adoc[].
 
-The activation key should have the following channels, pools, and respective updates:
+The activation key should have these channels, pools, and respective updates:
 
 ----
 - SUSE Manager Retail Branch Server 4.0 x86_64
