--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -117,7 +117,7 @@ The branch server can be configured automatically using the [command]``retail_br
 If you prefer to manually configure the branch server, you can do so using formulas.
 For more information about formulas, see xref:retail:retail-formulas.adoc[].
 
-.Procedure: Configuring Branch Server Formulas Using Helper Script
+.Procedure: Configuring Branch Server Formulas With a Helper Script
 
 . Branch server configuration is performed using the [command]``retail_branch_init`` command:
 +
