--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -137,7 +137,7 @@ salt <branch_server_salt_id> state.apply
 
 
 
-== Synchronize Images to the Branch Servers
+== Synchronize Images to the Branch Server
 
 The OS image you use on the {susemgr} server must be synchronized for use on the branch server.
 You can do this with the Salt [command]``image-sync`` tool.
