--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -142,7 +142,7 @@ salt <branch_server_salt_id> state.apply
 The OS image you use on the {susemgr} server must be synchronized for use on the branch server.
 You can do this with the Salt [command]``image-sync`` tool.
 
-.Procedure: Synchronize Images with Branch Server
+.Procedure: Synchronizing Images to the Branch Server
 
 . On the {susemgr} server, run this command:
 +
