--- a/modules/retail/pages/retail-install-unified.adoc
+++ b/modules/retail/pages/retail-install-unified.adoc
@@ -42,7 +42,7 @@ Ensure you take note of the passwords you set, you will need them later on.
 
 
 
-.Procedure: Installing {susemgr} Branch Server from a DVD Image
+.Procedure: Installing the Branch Server from a DVD Image
 
 . Boot your server from the installation image.
 In case of trouble, you might need to adjust the boot order in the BIOS.
