more cosmetic changes...

--- a/modules/administration/pages/public-cloud-azure.adoc
+++ b/modules/administration/pages/public-cloud-azure.adoc
@@ -15,12 +15,11 @@ Configuring SUSE Manager has to be done manually with {yast}.
 When you create your Azure virtual machine, choose the `B2ms` size.
 The `B2ms` VM contains:
 
-* 2 vCPUs
+* 2{nbsp}vCPUs
 * 8{nbsp}GB RAM
 * Up to 4 data disks
 * Max IOPS 2400
 * Temporary storage disk of 16{nbsp}GB.
-
 Data on this disk will be destroyed after the guest has been switched off.
 
 When you are setting up disk partitioning, we recommend:
@@ -81,7 +80,7 @@ When you are setting up networking, we recommend that you create a separate priv
 Configure the {productname} Server to use the internal IP address `10.0.0.4`.
 Ensure it is accessible from outside the network with IP `10.89.171.101`.
 
-Configure the firewall to only allow inbound traffic on ports `22`, `80`, and `443` to IP Address `10.0.0.4`.
+Configure the firewall to only allow inbound traffic on ports `22`, `80`, and `443` to IP address `10.0.0.4`.
 In this environment, if other servers are added to the network they cannot be reached from outside the network.
 
 Outbound is open from the private network.
