Public cloud #8951 ke (#657)
* Many cosmetic changes
* include public-cloud-azure.adoc and cosmetic changes
* see https://github.com/SUSE/doc-susemanager/pull/622/ (prep'ed by lana)
* Lana's edit.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -16,6 +16,7 @@ ifndef::backend-pdf[]
 ** xref:kubernetes.adoc[Kubernetes]
 // Public Cloud
 ** xref:public-cloud.adoc[Public Cloud]
+*** xref:public-cloud-azure.adoc[]
 // ISS
 ** xref:iss.adoc[Inter-Server Synchronization]
 ** Security
@@ -81,7 +82,7 @@ include::modules/administration/pages/kubernetes.adoc[leveloffset=+1]
 // Public Cloud
 
 include::modules/administration/pages/public-cloud.adoc[leveloffset=+1]
-
+include::modules/administration/pages/public-cloud-azure.adoc[leveloffset=+1]
 // ISS
 include::modules/administration/pages/iss.adoc[leveloffset=+1]
 
