--- a/modules/retail/pages/retail-formula-branchnetwork.adoc
+++ b/modules/retail/pages/retail-formula-branchnetwork.adoc
@@ -20,7 +20,7 @@ These services can be configured with {smr} formulas in the {susemgr} {webui}.
 
 . In the {susemgr} {webui}, open the details page for the branch server, and navigate to the [guimenu]``Formulas`` tab.
 . In the [guimenu]``Branch Network`` section, set these parameters:
-* Keep [guimenu]``Dedicated NIC`` checked
+* Keep [guimenu]``Dedicated NIC`` checked.
 * In the [guimenu]``NIC`` field, enter the name of the network device that is connected to the internal LAN.
 * In the [guimenu]``IP`` field, enter the static IP address to be assigned to the branch server on the internal LAN.
 * In the [guimenu]``Netmask`` field, enter the network mask of the internal LAN.
@@ -34,20 +34,21 @@ These services can be configured with {smr} formulas in the {susemgr} {webui}.
 
 
 
-== Set up a branch server with a shared network
+== Set up a Branch Server with a Shared Network
 
 In this configuration, the branch server has only one network interface card, which is used to connect to the {susemgr} server as well as the terminals.
 
-This configuration allows for the branch server to provide DNS, TFTP, PXE and FTP services to terminals, which are configured through {smr} formulas in the {susemgr} {webui}.
+This configuration allows for the branch server to provide DNS, TFTP, PXE, and FTP services to terminals.
+These services can be configured with {smr} formulas in the {susemgr} {webui}.
 Optionally, the branch server can also provide DHCP services in this configuration.
 
 [NOTE]
 ====
 If DHCP services are not provided by the branch server, ensure that your external DHCP configuration is set correctly:
 
-* The [systemitem]``next-server`` option must point to the branch server for PXE boot to work
-* The [systemitem]``filename`` option must correctly identify the network boot program (by default, this is [path]``/boot/pxelinux``)
-* The [systemitem]``domain-name-servers`` option must point to the branch server for correct host name resolution
+* The [systemitem]``next-server`` option must point to the branch server for PXE boot to work.
+* The [systemitem]``filename`` option must correctly identify the network boot program (by default, this is [path]``/boot/pxelinux``).
+* The [systemitem]``domain-name-servers`` option must point to the branch server for correct host name resolution.
 ====
 
 
