--- a/modules/retail/pages/retail-formula-branchnetwork.adoc
+++ b/modules/retail/pages/retail-formula-branchnetwork.adoc
@@ -52,13 +52,13 @@ If DHCP services are not provided by the branch server, ensure that your externa
 ====
 
 
-.Procedure: Setting up a branch server with a shared network
+.Procedure: Setting Up a Branch Server with a Shared Network
 
 . In the {susemgr} {webui}, open the details page for the branch server, and navigate to the [guimenu]``Formulas`` tab.
 . In the [guimenu]``Branch Network`` section, set these parameters:
-* Keep [guimenu]``Dedicated NIC`` unchecked
-* Select which services to enable on the branch server’s firewall.
-Ensure you include DNS, TFTP and FTP services.
+* Keep [guimenu]``Dedicated NIC`` unchecked.
+* Enable services on the branch server’s firewall.
+Ensure you include DNS, TFTP, and FTP services.
 * Select the [guimenu]``bind`` DNS forwarder mode.
 * Check DNS forwarder fallback if you want to rely on an external DNS if the branch DNS fails.
 * Specify the working directory, and the directory owner and group.
