--- a/modules/retail/pages/retail-formula-dhcpd.adoc
+++ b/modules/retail/pages/retail-formula-dhcpd.adoc
@@ -23,5 +23,5 @@ The DHCPd formula is used to configure the DHCP service on the branch server.
 . In the [guimenu]``Routers`` field, enter the IP address to be used by routers in the branch server network (for example: [systemitem]``192.168.1.5``).
 . In the [guimenu]``Next Server`` field, enter the hostname or IP address of the branch server (for example: [systemitem]``192.168.1.5``).
 . In the [guimenu]``Filename`` field, keep the default value of [systemitem]``/boot/pxelinux.0``.
-. Click btn:[Save Formula] to save your configuration
+. Click btn:[Save Formula] to save your configuration.
 . Apply the highstate.
