--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -15,7 +15,7 @@ Most environment lifecycles include at least test and production environments, b
 
 == Create a Content Lifecycle Project
 
-. In the {productname} {webui}, navigate to menu:Content Lifecycle[Content Lifecycle Projects], and click btn:[Create Project]
+. In the {productname} {webui}, navigate to menu:Content Lifecycle[Content Lifecycle Projects], and click btn:[Create Project].
 . In the [guimenu]``Label`` field, enter a label for your project.
 The [guimenu]``Label`` field only accepts lowercase letters, numbers, periods (``.``), hyphens (``-``) and underscores (``_``).
 . In the [guimenu]``Name`` field, enter a descriptive name for your project.
