--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -35,7 +35,8 @@ The [guimenu]``Name`` field only accepts lowercase letters, numbers, periods (``
 You can select the order of the environments in the lifecycle by selecting an environment in the [guimenu]``Insert before`` field when you create it.
 
 == Advanced: Filter types
-{productname} allows you to create various types of filters to control the content on project build. Below is the list of supported filters:
+{productname} allows you to create various types of filters to control the content on project build.
+This is the list of supported filters:
 
 * package filtering
 ** by name
