--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -54,7 +54,8 @@ No package dependency solving is done on content filtering.
 ====
 
 === Filter ``rule`` Parameter
-Moreover, each filter has ``rule`` parameter set to either ``Allow`` or ``Deny`` value. The filters are processed as follows:
+Moreover, each filter has a ``rule`` parameter set to either ``Allow`` or ``Deny``.
+The filters are processed:
 - if a package or patch satisfies a ``Deny`` filter, it will be excluded from the result,
 - if a package or patch satisfies an ``Allow`` filter, it will be included in the result (even if it was excluded by a ``Deny`` filter).
 
