--- a/modules/retail/pages/retail-deploy-terminals.adoc
+++ b/modules/retail/pages/retail-deploy-terminals.adoc
@@ -1,11 +1,11 @@
 [[retail.deploy_terminals]]
-= Deploying Terminals
+= Deploy Terminals
 
 
 When you have the {susemgr} Server and Branch Server set up, you are ready to deploy point-of-service terminals by following these steps:
 
 . Create hardware type groups
-. Assign and configure the saltboot formula for each hardware type group
+. Assign and configure the Saltboot formula for each hardware type group
 . Synchronize images to the branch server
 . Deploy images to the terminals
 
@@ -18,10 +18,10 @@ For how to build OS images, see xref:administration:image-management.adoc[].
 
 [IMPORTANT]
 ====
-After you have registered new terminals, always check the {susemgr} {webui} to ensure your terminal has connected successfully to the branch server, and you have not connected directly to the {susemgr} server by mistake.
+After you have registered new terminals, always check the {susemgr} {webui} to ensure your terminals have connected successfully to the branch server, and not directly to the {susemgr} server by mistake.
 ====
 
-== Create a Hardware Type group
+== Create a Hardware Type Group
 
 Each terminal requires a specific hardware type, which contains information about the product name and terminal manufacturer.
 However, the {susemgr} database does not have this information to begin with.
@@ -65,7 +65,7 @@ Each hardware type group must have the Saltboot formula applied.
 
 . Open the details page for your new hardware type group, and navigate to the [guimenu]``Formulas`` tab.
 . Select the [systemitem]``saltboot-formula`` and click btn:[Save].
-. Navigate to the new menu:Formulas[Saltboot] tab.
+. Navigate to the menu:Formulas[Saltboot] tab.
 . Configure the Saltboot formula according to the instructions in xref:retail:retail-formulas.adoc[].
 
 
