--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -13,9 +13,9 @@ This is achieved through a series of environments that your software channels ca
 Most environment lifecycles include at least test and production environments, but you can have as many environments as you require.
 
 
-.Procedure: Creating a Content Lifecycle Project
+== Create a Content Lifecycle Project
 
-. In the {productname} {webui}, navigate to menu:Content Lifecycle[Content Lifecycle Projects], and click btn:[Create Project]
+. In the {productname} {webui}, navigate to menu:Content Lifecycle[Content Lifecycle Projects], and click btn:[Create Project].
 . In the [guimenu]``Label`` field, enter a label for your project.
 The [guimenu]``Label`` field only accepts lowercase letters, numbers, periods (``.``), hyphens (``-``) and underscores (``_``).
 . In the [guimenu]``Name`` field, enter a descriptive name for your project.
@@ -33,6 +33,33 @@ To create a new filter, click btn:[Create new Filter].
 The [guimenu]``Name`` field only accepts lowercase letters, numbers, periods (``.``), hyphens (``-``) and underscores (``_``).
 . Continue creating environments until you have all the  environments for your lifecycle completed.
 You can select the order of the environments in the lifecycle by selecting an environment in the [guimenu]``Insert before`` field when you create it.
+
+== Advanced: Filter Types
+{productname} allows you to create various types of filters to control the content on project build.
+This is the list of supported filters:
+
+* package filtering
+** by name
+** by name, epoch, version, release and architecture
+* patch filtering
+** by advisory name
+** by synopsis
+** by date
+** by affected package
+** by type
+
+[NOTE]
+====
+No package dependency solving is done on content filtering.
+====
+
+=== Filter ``rule`` Parameter
+Moreover, each filter has a ``rule`` parameter set to either ``Allow`` or ``Deny``.
+The filters are processed:
+- if a package or patch satisfies a ``Deny`` filter, it will be excluded from the result,
+* If a package or patch satisfies an ``Allow`` filter, it will be included in the result (even if it was excluded by a ``Deny`` filter).
+
+This behavior is useful when you want to exclude large number of packages or patches using a general ``Deny`` filter and "cherry-pick" specific packages or patches with specific ``Allow`` filters.
 
 [NOTE]
 ====
@@ -76,7 +103,7 @@ When the project has been built, the built sources can be sequentially promoted 
 
 
 
-=== Assign Systems to Environments
+== Assign Systems to Environments
 
 When you build and promote content lifecycle projects, it creates a tree of software channels.
 To add systems to the environment, assign the base and child software channels to your system using menu:Software[Software Channels] in the [guimenu]``System Details`` page for the system.
