--- a/modules/retail/pages/retail-formula-pxe.adoc
+++ b/modules/retail/pages/retail-formula-pxe.adoc
@@ -4,7 +4,7 @@
 The PXE formula is used to configure PXE booting on the branch server.
 
 
-.Procedure: Configuring PXE booting
+.Procedure: Configuring PXE Booting
 . In the {susemgr} {webui}, open the details page for the branch server, and navigate to the [guimenu]``Formulas`` tab.
 . Select the [systemitem]``Pxe`` formula, and click [btn]``Save``.
 . Navigate to the menu:Formulas[Pxe] tab, and set these parameters:
@@ -15,7 +15,7 @@ For more information about possible values, see <<retail.sect.formulas.pxe.kerne
 * In the [guimenu]``PXE root directory`` field, enter the path to the saltboot directory (for example, [systemitem]``/srv/saltboot``).
 * In the [guimenu]``Branch id`` field, type a name to use as a branch identifier (for example: [systemitem]``Branch0001``).
 Use only alphanumeric characters for the branch identifier.
-. Click [btn]``Save Formula`` to save your configuration
+. Click [btn]``Save Formula`` to save your configuration.
 . Apply the highstate.
 
 
@@ -26,8 +26,7 @@ Saltboot supports common kernel parameters and saltboot-specific kernel paramete
 All the parameters can be entered in the [guimenu]``Kernel Command Line Parameters`` field of the PXE formula.
 
 [systemitem]``kiwidebug=1``::
-
-Starts a shell on tty2 during boot and enables debug log level in Salt.
+Starts a shell on tty2 during boot and enables debug logging in Salt.
 +
 [WARNING]
 ====
