--- a/modules/retail/pages/retail-formula-saltboot.adoc
+++ b/modules/retail/pages/retail-formula-saltboot.adoc
@@ -6,14 +6,14 @@ The Saltboot formula is used to configure disk images and partitioning for the s
 [IMPORTANT]
 ====
 The Saltboot formula is meant to be used as a group formula.
-Enable and configure saltboot formula for hardware type groups.
+Enable and configure Saltboot formula for hardware type groups.
 ====
 
-.Procedure: Configuring the hardware type group with saltboot
+.Procedure: Configuring the Hardware Type Group with Saltboot
 
 . Open the details page for your new hardware type group, and navigate to the [guimenu]``Formulas`` tab.
-. Select the [systemitem]``saltboot-formula`` and click btn:[Save].
-. Navigate to the new menu:Formulas[Saltboot] tab.
+. Select the Saltboot formula and click btn:[Save].
+. Navigate to the menu:Formulas[Saltboot] tab.
 . In the [guimenu]``Disk 1`` section, set these parameters:
 * In the [guimenu]``Disk symbolic ID`` field, enter a custom name for the disk (for example, [systemitem]``disk1``).
 * In the [guimenu]``Device type`` field, select [systemitem]``DISK``.
@@ -47,7 +47,7 @@ This will ensure the partition uses up all remaining space.
 This will ensure you use the latest available version.
 * In the [guimenu]``Partition encryption password`` field, enter a password if you want to encrypt the partition.
 * In the [guimenu]``Partition flags`` field, leave it empty.
-. Click btn:[Save Formula] to save your formula.
+. Click btn:[Save Formula] to save your configuration.
 
 
 
@@ -55,6 +55,8 @@ This will ensure you use the latest available version.
 == Special Partition Types
 
 The Saltboot formula helps you with setting up special partition types.
+
+
 
 === BIOS grub Partition
 
@@ -71,6 +73,8 @@ Partition Flags: bios_grub
 
 Leave the other fields empty.
 
+
+
 === EFI Partition
 
 An EFI partition is needed for local booting on EFI machines, [guimenu]``Partition Table Type`` must be `GPT`.
@@ -86,6 +90,7 @@ Partition Flags: boot
 ----
 
 Leave the other fields empty.
+
 
 
 === `msdos` Disklabel Limitations
