--- a/modules/retail/pages/retail-delta-images.adoc
+++ b/modules/retail/pages/retail-delta-images.adoc
@@ -14,8 +14,7 @@ The [command]``retail_create_delta`` tool creates a delta image on the {productn
 The tool uses [command]``xdelta3`` internally.
 
 Use the name and the version strings of the target and the source image as parameters to the command.
-The format of the parameters must be `<NAME>-<VERSION>` and they must correspond to
-the image names and versions available in the pillar.
+The format of the parameters must be `<NAME>-<VERSION>` and they must correspond to the image names and versions available in the pillar.
 For example, if the pillar contains:
 
 ----
@@ -37,7 +36,7 @@ retail_create_delta POS_Image_JeOS6-6.0.1 POS_Image_JeOS6-6.0.0
 ----
 
 This command will generate the delta image between version 6.0.0 and version 6.0.1.
-The resulting delta file is saved in [filename]``/srv/www/os-images`` and the corresponding {sls} file in [filename]``/srv/susemanager/pillar_data/images/``.
+The resulting delta file is saved in [path]``/srv/www/os-images`` and the corresponding {sls} file in [path]``/srv/susemanager/pillar_data/images/``.
 
 
 
