--- a/modules/retail/pages/retail-mass-config.adoc
+++ b/modules/retail/pages/retail-mass-config.adoc
@@ -35,12 +35,13 @@ See the [command]``retail_yaml --help`` output for additional options.
 If you need to change your configuration, you can edit the YAML file at any time, and use the [command]``retail_yaml --from-yaml`` command to upload the new configuration.
 
 
-Use the empty profiles together with activation keys to onboard all the systems of your infrastructure.
+Use empty profiles together with activation keys to onboard all the systems of your infrastructure.
 Use an activation key to assign the channels listed in xref:retail:retail-install-setup.adoc[].
 
 
+
 [[retail.sect.admin.terminal_mass_config]]
-== Terminal mass configuration
+== Terminal Mass Configuration
 
 If you are working in an environment with many terminals, you might find it easier to configure the terminals automatically with a pre-defined configuration file, rather than configuring each terminal individually.
 
