--- a/modules/retail/pages/retail-mass-config.adoc
+++ b/modules/retail/pages/retail-mass-config.adoc
@@ -45,47 +45,46 @@ Use an activation key to assign the channels listed in xref:retail:retail-instal
 
 If you are working in an environment with many terminals, you might find it easier to configure the terminals automatically with a pre-defined configuration file, rather than configuring each terminal individually.
 
-In order to do this, you will need to have your infrastructure planned out ahead of time, including the IP addresses, hostnames, and domain names of branch servers and terminals.
+You will need to have your infrastructure planned out ahead of time, including the IP addresses, hostnames, and domain names of branch servers and terminals.
 You will also require the hardware (MAC) addresses of each terminal.
 
 [NOTE]
 ====
 The settings specified in the configuration file cannot always be successfully applied.
-In cases where there is a conflict, {susemgr} will ignore the request in the file.
+In cases where there is a conflict, {productname} will ignore the request in the file.
 This is especially important when designating hostnames.
-You should always check the details have been applied as expected after using this configuration method.
+You should always check that the details have been applied as expected after using this configuration method.
 ====
 
 
-=== Configure multiple terminals
+=== Configure Multiple Terminals
 
-.Procedure: Configuring multiple terminals
+.Procedure: Configuring Multiple Terminals
 
 . Create a YAML file describing the infrastructure you intend to install, specifying the hardware address for each terminal.
-An example YAML file is at the end of this chapter, for you to reference.
-. On a clean {susemgr} installation, import the YAML file you have created:
+For an example YAML file, see <<retail.mass.config.example.yaml>>.
+. On a clean {productname} installation, import the YAML file you have created:
 +
 ----
 retail_yaml --from-yaml filename.yaml
 ----
 +
-You can use the [command]``retail_yaml --help`` command for additional options.
+See the [command]``retail_yaml --help`` output for additional options.
 . In the {susemgr} {webui}, check that your systems are listed and displaying correctly, and the formulas you require are available.
 . Create activation keys for each of your branch servers, connect them using bootstrap, and configure them as proxy servers.
+// FIXME: look up exact refs
 For further information on these steps, see the {susemgr} documentation.
-. Apply highstate to apply your configuration changes.
-In the [guimenu]``States`` tab, click btn:[Apply Highstate].
+. In the [guimenu]``States`` tab, click btn:[Apply Highstate] to deploy your configuration changes.
 . Connect your terminals according to your infrastructure plan.
-
 
 If you need to change your configuration, you can edit the YAML file at any time, and use the [command]``retail_yaml --from-yaml`` command to upload the new configuration.
 
-If you have a current configuration that you would like to export to a YAML file, use:
+If you already have a configuration that you would like to export to a YAML file, use:
 ----
 retail_yaml --to-yaml filename.yaml
 ----
 This can be a good way to create a basic mass configuration file.
-However it is important to check the file before using it, as some mandatory configuration entries will be missing.
+However, it is important to check the file before using it, because some mandatory configuration entries are probably missing.
 
 [IMPORTANT]
 ====
@@ -96,14 +95,14 @@ If these do not match, the bootstrap script could fail.
 
 
 [[retail.mass.config.example.yaml]]
-== Example YAML file for mass configuration
+== Example YAML File for Mass Configuration
 
 // Ensure this section stays at the end of the chapter, its location is referenced earlier in this file. -LKB
 
-You can use the [command]``retail_yaml`` command to import configuration parameters from a pre-prepared YAML file.
-This section contains a commented example YAML file for you to reference.
+You can use the [command]``retail_yaml`` command to import configuration parameters from a manually prepared YAML file.
+This section contains YAML example file with comments.
 
-.Example: YAML mass terminal configuration file
+.Example: YAML Mass Terminal Configuration File
 ----
 branches:
 # there are 2 possible setups: with / without dedicated NIC
