--- a/modules/retail/pages/retail-terminal-ratelimiting.adoc
+++ b/modules/retail/pages/retail-terminal-ratelimiting.adoc
@@ -2,7 +2,7 @@
 == Rate Limiting Terminals
 
 Salt is able to run commands in parallel on a large number of terminals.
-This can potentially create large amounts of load on your infrastructure.
+This can potentially create heavy load on your infrastructure.
 You can use rate-limiting parameters to control the load in your environment.
 
 For more information about rate limiting on terminals, see xref:salt:salt-rate-limiting.adoc[].
