--- a/modules/retail/pages/retail-prepare-migration.adoc
+++ b/modules/retail/pages/retail-prepare-migration.adoc
@@ -1,15 +1,15 @@
 [[retail-prepare-migration]]
 = Prepare to Migrate
 
-This book is intended to guide you through migration your {slepos} or older {smr} installation, to the newest version of {smr}.
+This document is intended to guide you through migration your {slepos} or older {smr} installation (3.1 or 3.2) to the newest version of {smr}.
 
 [IMPORTANT]
 ====
 Migrating configuration from {slepos} to {smr} is a technology preview and will be enhanced in future releases of {susemgr}.
 ====
 
-The book is divided into scenarios.
-Pick the scenario that best suits your environment, and follow the instructions in that chapter to migrate your installation.
+This document is divided into scenarios.
+Pick the scenario that best suits your environment, and follow the instructions in that section to migrate your installation.
 
 [NOTE]
 ====
@@ -18,6 +18,7 @@ Ensure your existing installation is fully updated, and that you have performed 
 
 
 
+// 2019-08-20, ke: Better moving this to a file of its own?
 == Migrating from {slepos}
 
 {slepos} cannot be upgraded directly to {smr}, so the migration process requires you to perform some manual configuration.
