remove lonely section

--- a/modules/retail/pages/retail-next.adoc
+++ b/modules/retail/pages/retail-next.adoc
@@ -1,10 +1,5 @@
 [[retail-next]]
-= What next?
-
-
-
-[[retail.sect.next]]
-== What next?
+= What Next?
 
 This document covers only a sub-section of information about your {smr} installation.
 If you need further information or support, try one of these options.
@@ -12,7 +7,7 @@ If you need further information or support, try one of these options.
 
 
 [[retail.sect.next.docs]]
-=== More documentation
+== More Documentation
 
 For {susemgr} documentation, visit https://www.suse.com/documentation/suse-manager-4/
 
@@ -22,8 +17,8 @@ Note, however, that {smr} documentation supersedes this information.
 
 
 [[retail.sect.next.support]]
-=== Support
+== Support
 
-For personalized support, log in to your {scc} account here: https://scc.suse.com/login
+For personalized support, log in to your {scc} account at https://scc.suse.com/login.
 
 For assistance with planning and installing your {smr} environment, contact the SUSE Consulting team.
