--- a/modules/retail/pages/retail-migration-slepostosuma.adoc
+++ b/modules/retail/pages/retail-migration-slepostosuma.adoc
@@ -2,10 +2,10 @@
 = Migrate {slepos} 11 to {smr}
 
 
-This section describes migrating from an existing {slepos} 11 installation, to a new {susemgr} installation.
-You can perform this migration all at once by creating a data dump in a single file, then moving it to the new server; see <<retail_migr.sect.slepostosuma.s1.complete>>.
+This section describes migrating from an existing {slepos} 11 installation to a new {susemgr} installation.
+You can perform this migration all at once by creating a data dump in a single file, and then moving it to the new server; see <<retail_migr.sect.slepostosuma.s1.complete>>.
 Alternatively, you can perform the migration in stages by creating a data dump for each branch, and moving them to the new server one by one; see <<retail_migr.sect.slepostosuma.s1.bbb>>.
-Importing and deploying the converted data can also be done in one step, or multiple steps, depending on your environment.
+Importing and deploying the converted data can also be done in one or multiple steps, depending on your environment.
 
 
 
