public cloud docs reorg

--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -8,6 +8,7 @@ ifndef::backend-pdf[]
 *** xref:hardware-requirements.adoc[Hardware Requirements]
 *** xref:network-requirements.adoc[Network Requirements]
 *** xref:client-requirements.adoc[Supported Clients]
+*** xref:public-cloud-requirements.adoc[Public Cloud Requirements]
 ** Installation
 ifeval::[{suma-content} == true]
 *** xref:install-server-unified.adoc[Install Server]
@@ -19,6 +20,7 @@ endif::[]
 // *** xref:install-server.adoc[Install Server from Packages]
 //*** xref:install-proxy.adoc[Install Proxy from Packages]
 *** xref:install-ibmz.adoc[Install on IBM Z]
+*** xref:public-cloud-registration.adoc[Registration in the Public Clouds]
 ** Setting Up
 *** xref:server-setup.adoc[Server Setup]
 *** xref:proxy-registration.adoc[Proxy Registration]
@@ -56,6 +58,9 @@ include::modules/installation/pages/network-requirements.adoc[leveloffset=+2]
 // Client Requirements
 include::modules/installation/pages/client-requirements.adoc[leveloffset=+2]
 
+// Public Cloud Requirements
+include::modules/installation/pages/public-cloud-requirements.adoc[leveloffset=+2]
+
 == Installation
 
 ifeval::[{productname} == "SUSE Manager"]
@@ -77,6 +82,9 @@ include::modules/installation/pages/install-server.adoc[leveloffset=+2]
 
 // Install on IBM Z
 include::modules/installation/pages/install-ibmz.adoc[leveloffset=+2]
+
+// Registration in Public Clouds
+include::modules/installation/pages/public-cloud-registration.adoc[leveloffset=+2]
 
 == Setting Up
 
