--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -73,6 +73,7 @@ In the next section you will create the administrator's account and synchronize 
 
 == Creating the Main Administration Account
 
+
 This section will walk you through creating your organizations main administration account for {productname}.
 
 [WARNING]
@@ -83,6 +84,14 @@ The main administration account is the _highest authority account_ within {produ
 For security it is recommended that the main administrator creates _low level admin accounts_ designated for administration of organizations and individual groups.
 ====
 
+{productname} Proxy does not have administration access to the {webui}.
+It can be managed through its parent {productname} Server.
+
+[NOTE]
+.Admin Account in Public Clouds
+====
+In the Public Clouds, the setup procedure will automatically create an administrator account. See <<pubclouds-credentials>>.
+====
 
 .Procedure: Setting Up the Main Administration Account
 . In the browser, enter the address provided after completing setup and open the {productname} {webui}.
@@ -101,6 +110,56 @@ image::quickstart-mgr-setup-admin1.png[scaledwidth=80%]
 You are now presented with the {productname} menu:Home[Overview] page.
 // In the next section you will prepare the server for connecting the first client.
 
+[[pubclouds-credentials]]
+=== Public Clouds Account Credentials
+
+The user name automatically created for the administrator in the Public Clouds is `admin`.
+
+[cols="1,1,1", options="header"]
+|===
+|
+          Amazon EC2
+
+|
+          Google Compute Engine
+
+|
+          Microsoft Azure
+
+
+|
+
+[replaceable]``Instance-ID``
+|
+
+[replaceable]``Instance-ID``
+|
+
+[replaceable]``Instance-Name``**-suma**
+|===
+
+The current value for the [replaceable]``Instance-ID`` or [replaceable]``Instance-Name`` in case of the Azure Cloud, can be obtained from the public cloud Web console or from within a terminal session as follows:
+
+** Obtain instance id from within Amazon EC2 instance
++
+
+----
+$ ec2metadata --instance-id
+----
+** Obtain instance id from within Google Compute Engine instance
++
+
+----
+$ gcemetadata --query instance --id
+----
+** Obtain instance name from within Microsoft Azure instance
++
+
+----
+$ azuremetadata --instance-name
+----
+
+After logging in through the {productname} Server {webui}, *change* the default password.
 
 == Synchronizing Products from {scc}
 
