--- a/modules/upgrade/pages/upgrade-overview.adoc
+++ b/modules/upgrade/pages/upgrade-overview.adoc
@@ -1,12 +1,14 @@
-[[bp.sp.migration.sp.intro]]
-= Service Pack Migration Introduction
+[[upgrade-overview]]
+= Introduction
 
+{productname} has three main components, all of which will need regular updates.
+This guide covers updating your {productname} Server, Proxy, and clients.
 
+In addition to upgrading the main components of {productname}, you are also likely to need to update other underlying technologies, including the database.
 
-You can upgrade the underlying operating system and also migrate {productname} server from one patch level to the other (SP migration) or from one version to the next.
-This works for migrating {productname} server 3.0 to version 3.1, or version 3.1 to version {productnumber}.
-For migrating version 3.0 to version 3.1, see the product documentation for {productname} 3.1:
+It is also possible to automate some upgrades.
 
+This guide is not intended to be read cover to cover.
+Instead, navigate to the component you want to upgrade, then identify the versions you are upgrading from and to.
 
-* https://www.suse.com/documentation/suse-manager-3/
-
+If you are upgrading within the same major version, see xref:upgrade:sp-migration.adoc[].
