--- a/modules/upgrade/nav-upgrade-guide.adoc
+++ b/modules/upgrade/nav-upgrade-guide.adoc
@@ -2,7 +2,7 @@
 ifndef::backend-pdf[]
 
 * xref:upgrade-overview.adoc[Upgrade Guide]
-** xref:server-upgrade.adoc[Server Update]
+** xref:server-upgrade.adoc[Package Updates]
 ** xref:migrate-3x-3x.adoc[Server Upgrade 3.x -> 3.x]
 ** xref:migrate-3x-4x.adoc[Server Upgrade 3.x -> 4.x]
 ** xref:proxy-migration.adoc[Proxy Upgrade 3.x -> 4.x]
