--- a/modules/upgrade/pages/migrate-3x-3x.adoc
+++ b/modules/upgrade/pages/migrate-3x-3x.adoc
@@ -1,8 +1,8 @@
 [[bp.sp.migration.version]]
-= Migrating {productname} from Version 3.1 to 3.2
+= Migrating from Version 3.1 to 3.2
 
 
-The migration can be done using either the {yast} Online Migration tool, or with the Zypper command line tool.
+Migrating {productname} from version 3.1 to 3.2 can be done using either the {yast} Online Migration tool, or with the Zypper command line tool.
 
 // So on my desktop, YaST calls it "online upgrades". We should check this terminology. LKB 2019-08-21
 
