minor improvements and typo fixes in pubcloud specific docs

--- a/modules/installation/pages/public-cloud-registration.adoc
+++ b/modules/installation/pages/public-cloud-registration.adoc
@@ -3,12 +3,12 @@
 
 Since {productname} is preinstalled in Public Cloud images, there is no installation step required. However, {productname} Server needs to be registered with {scc} in order to receive updates.
 
-To register you system, you have two options:
+To register your system, you have two options:
 
 ** Run [command]``yast2 scc`` and enter your {scc} credentials.
 ** Run [command]``SUSEConnect -e your_email -r your_registration_code`` as user `root` in a shell.
 
-Registering {productname} Server will also enable all required {sle} Modules, with the exception of the Public Cloud Module. Since a {productname} Server instance in the Public Cloud requires packages from this Module, this needs to be enabled manually. To do that, in YaST2 simply select ``Public Cloud Module`` from the list of extensions that will be shown during registration, or on the command line, run [command]``SUSEConnect -p sle-module-public-cloud/15.1/x86_64`` after registering the base product.
+Registering {productname} Server will also enable all required {sle} Modules, with the exception of the Public Cloud Module. {productname} Server instances in the Public Cloud require packages from the Public Cloud Module and it is recommended to enable the module to keep Public Cloud specific packages up to date. In the YaST2 `Software Repositores` management module select `Add` then select `Extensions and Modules from Registration Server...` and from the list of available extensions select `Public Cloud Module` from the list of extensions. Alternatively, you can add the module via the command line using [command]``SUSEConnect -p sle-module-public-cloud/15.1/x86_64``. The Public Cloud Module can only be registered after the initial registration is completed.
 
 When the installation procedure has finished, you can check that you have all the required modules by using the [command]``SUSEConnect --status-text`` command at a command prompt.
 For {susemgr} Server, the expected modules are:
