--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -90,7 +90,7 @@ It can be managed through its parent {productname} Server.
 [NOTE]
 .Admin Account in Public Clouds
 ====
-In the Public Clouds, the setup procedure will automatically create an administrator account. See <<pubclouds-credentials>>.
+In public clouds, the setup procedure will automatically create an administrator account. See <<pubclouds-credentials>>.
 ====
 
 .Procedure: Setting Up the Main Administration Account
@@ -113,7 +113,7 @@ You are now presented with the {productname} menu:Home[Overview] page.
 [[pubclouds-credentials]]
 === Public Clouds Account Credentials
 
-The user name automatically created for the administrator in the Public Clouds is `admin`.
+The user name automatically created for the administrator in public clouds is `admin`.
 
 [cols="1,1,1", options="header"]
 |===
