Proxy - note about Salt

--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -10,6 +10,13 @@ You will need to complete the {productname} Server migration before you start.
 The system must be running {productname}{nbsp}3.2 with all the latest updates applied.
 Before you start, ensure that the system is up to date and all updates have been installed successfully.
 
+[NOTE]
+====
+This process cannot be used to upgrade a {productname} Proxy that was registered as a Salt client.
+====
+
+// Do we have Salt instructions somewhere? LKB 2019-08-22
+
 
 
 == Prepare to Migrate
