--- a/modules/retail/pages/retail-prepare-migration.adoc
+++ b/modules/retail/pages/retail-prepare-migration.adoc
@@ -18,7 +18,7 @@ Ensure your existing installation is fully updated, and that you have performed 
 
 
 
-== Preparing Migration from {slepos}
+== Prepare to Migrate from {slepos}
 
 {slepos} cannot be upgraded directly to {smr}, so the migration process requires you to perform some manual configuration.
 To assist you in the migration, as much information as possible about the existing hardware configuration and network infrastructure is recorded.
